# singleLoginSystem

./: .gitignore  README.md
client/singleloginapp/: .gitignore  README.md  pubspec.yaml
client/singleloginapp/android/: build.gradle  happy
client/singleloginapp/android/app/: CMakeLists.txt  build.gradle
client/singleloginapp/android/app/src/debug/: AndroidManifest.xml
client/singleloginapp/android/app/src/main/: AndroidManifest.xml
client/singleloginapp/android/app/src/main/assets/: server.crt
client/singleloginapp/android/app/src/main/kotlin/com/broadli/singleloginapp/: AppApplication.kt  LoginControler.kt  MainActivity.kt
client/singleloginapp/android/app/src/main/kotlin/com/broadli/singleloginapp/config/: MsgType.kt
client/singleloginapp/android/app/src/main/kotlin/com/broadli/singleloginapp/constant/: Constants.java  ResultCode.java
client/singleloginapp/android/app/src/main/kotlin/com/broadli/singleloginapp/controller/: ILoginController.kt  LoginController.kt  LoginUIController.kt
client/singleloginapp/android/app/src/main/kotlin/com/broadli/singleloginapp/model/: Msg.kt  UserInfo.kt
client/singleloginapp/android/app/src/main/kotlin/com/broadli/singleloginapp/network/: GrpcChannelBuilder.java  GrpcChannelBuilder.kt  NetworkController.kt  NetworkMethod.java  NetworkMethod.kt
client/singleloginapp/android/app/src/main/kotlin/com/broadli/singleloginapp/utils/: CommonUtils.kt  DeviceUtils.kt  SharedPreferencesUtils.kt
client/singleloginapp/android/app/src/main/res/drawable/: launch_background.xml
client/singleloginapp/android/gradle/wrapper/: gradle-wrapper.properties
client/singleloginapp/djinni/: auth.djinni  djinni.sh
client/singleloginapp/djinni/authso/: login_core_impl.cpp  login_core_impl.hpp
client/singleloginapp/djinni/authso/model/: network_result.cpp  network_result.h  proj_constants.cpp  proj_constants.h
client/singleloginapp/djinni/authso/network/: network.cpp  network.h
client/singleloginapp/djinni/authso/storage/: share_preferences.cpp
client/singleloginapp/djinni/authso/utils/: glob_utils.h  log_utils.cpp  network_utils.cpp
client/singleloginapp/djinni/protos/: README.md  account.grpc.pb.cc  account.grpc.pb.h  account.pb.cc  account.pb.h  account.proto  todo.grpc.pb.cc  todo.grpc.pb.h  todo.pb.cc  todo.pb.h  todo.proto  update.sh
client/singleloginapp/ios/Runner/: Info.plist
client/singleloginapp/ios/Runner.xcodeproj/: project.pbxproj
client/singleloginapp/lib/: authso.dart  main.dart
client/singleloginapp/lib/common/: global.dart
client/singleloginapp/lib/config/: config.dart
client/singleloginapp/lib/controller/: dabase_provider.dart
client/singleloginapp/lib/data/: categories.dart  categories_dao.dart  recent_users.dart  todo_database.dart  todo_database.g.dart  todo_with_category.dart  todos_dao.dart
client/singleloginapp/lib/msg/: event_listener.dart  message.dart  message.g.dart  msg_channel.dart  result.dart
client/singleloginapp/lib/pages/: home_page.dart  login_page.dart  main_page.dart  register_page.dart  test_page.dart
client/singleloginapp/lib/test/: dart_ffi_page.dart
client/singleloginapp/lib/utils/: log_util.dart
client/singleloginapp/lib/widget/: animatedloginbutton.dart  new_category_input_widget.dart  new_todo_input_widget.dart  todo_item_widget.dart
client/singleloginapp/native_auth/android/: .project
client/singleloginapp/test/: widget_test.dart
pem/: ca.crt  server.crt  server.csr  server.pem
server/: .gitignore copy  Dockerfile  WORKSPACE  docker-compose.yml
server/bazel/: grpc_deps.bzl
server/docker-src/source/conf/: server_conf.json
server/docker-src/source/pem/: ca.crt  ca.srl  keyfile  server.csr  server.key  server.pem
server/source/: BUILD
server/source/cpp/account/: account_server.cc
server/source/cpp/account/model/: category.cc  category.h  todo.cc  todo.h
server/source/cpp/constant/: my_constant.cc  my_constant.h
server/source/cpp/manager/db/: db_base.cpp  db_base.h  db_manager.cpp  db_manager.h
server/source/cpp/manager/redis/: login_redis.cpp  login_redis.h  redis_manager.cpp  redis_manager.h
server/source/pem/: server.crt  server.csr
server/source/protos/: account.proto  todo.proto
server/src/: BUILD
